fix issue with secondary product images getting stretched

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -131,12 +131,9 @@ select#option
         padding-right: 30px
     
     img
+      align-self: center
       display: block
-      height: 100%
       width: 100%
-      
-      @media screen and (max-width: $break-small)
-        height: auto
         
     &.visible
       transform: translate(0,-20px)
